# simpleCalculator

./: .gitignore  BET.cpp  BET.h  CMakeLists.txt  Makefile  README.MD  TODO.MD  calculator.cpp  calculator.h  constants.h  dictionary.cpp  dictionary.h  dotests.bat  expression.cpp  expression.h  function.cpp  function.h  input.cpp  input.h  input.splc  main.cpp  make.bat  math.splc  mem.bat  number.cpp  number.h  output.cpp  output.h  run.bat  symbol.cpp  symbol.h  util.cpp  util.h
.github/workflows/: codeql-analysis.yml
docs/: TODO.MD
source/: BET.cpp  calculator.cpp  calculator.h  constants.h  dictionary.cpp  dictionary.h  expression.cpp  function.cpp  function.h  input.cpp  input.h  input.splc  io.h  main.cpp  number.h  output.cpp  symbol.h  util.cpp  util.h
test/: compare.cpp  expected.txt  got.txt
